# nasiko-ai-agent

./: .gitignore  README.md
a2a-agent-template/a2a-agent-template/: .gitignore  CUSTOMIZE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
a2a-agent-template/a2a-agent-template/src/: __init__.py  __main__.py  agent_toolset.py  openai_agent.py  openai_agent_executor.py
a2a-black-swan-agent/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
a2a-black-swan-agent copy/: Dockerfile  README.md  pyproject.toml
a2a-black-swan-agent copy/src/: __init__.py  __main__.py  openai_agent.py  openai_agent_executor.py  quant_toolset.py
a2a-black-swan-agent/src/: __main__.py  openai_agent.py  quant_toolset.py
a2a-translator/a2a-translator/src/: __main__.py  openai_agent.py  openai_agent_executor.py
a2a-weather-agent/a2a-weather-agent/: CUSTOMIZE.md  README.md  docker-compose.yml  pyproject.toml
a2a-weather-agent/a2a-weather-agent/src/: __main__.py  openai_agent.py  openai_agent_executor.py  weather_toolset.py
web/: index.html  package-lock.json  package.json
web/src/: App.jsx  styles.css
web/src/api/: a2aClient.js
web/src/components/: ChatPanel.jsx  DebugPanel.jsx  PresetsPanel.jsx
web/src/utils/: responseParser.js
